# sonarqube-scanner

./: .gitignore  README.md  config.yaml  pyproject.toml  sonar-project.properties  sonarqube_scanner.py
.github/workflows/: ci.yaml  style.yml
docs/: SCANNER-1-private-repos-design.md  sonar-project.properties.template
sonarqube_scanner/: __init__.py  badges.py  cli.py  config.py  git.py  scanner.py
tests/: conftest.py  test_config.py  test_git.py
